@@ -12,7 +12,7 @@
 # Copyright (c) 2001-2002 David Gravereaux.
 #
 #------------------------------------------------------------------------------
-# RCS: @(#) $Id: makefile.vc,v 1.90 2002/05/08 04:25:35 davygrvy Exp $
+# RCS: @(#) $Id: makefile.vc,v 1.91 2002/06/21 22:23:21 dgp Exp $
 #------------------------------------------------------------------------------
 
 !if "$(MSVCDIR)" == ""
@@ -731,9 +731,12 @@ install-libraries:
 	@echo installing opt0.4
 	@xcopy /i /y "$(ROOT)\library\opt\*.tcl" \
 		"$(SCRIPT_INSTALL_DIR)\opt0.4\"
-	@echo installing msgcat1.2
+	@echo installing msgcat1.3
 	@xcopy /i /y "$(ROOT)\library\msgcat\*.tcl" \
-	    "$(SCRIPT_INSTALL_DIR)\msgcat1.2\"
+	    "$(SCRIPT_INSTALL_DIR)\msgcat1.3\"
+	@echo installing tcltest2.1 
+	@xcopy /i /y "$(ROOT)\library\tcltest\*.tcl" \
+	    "$(SCRIPT_INSTALL_DIR)\tcltest2.1\"
 	@echo installing $(TCLDDELIBNAME)
 !if $(STATIC_BUILD)
 	@xcopy /i /y "$(TCLDDELIB)" "$(LIB_INSTALL_DIR)\"
